--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script language="JavaScript" type="text/javascript">
-location.href="https://grupooxbr.wixsite.com/grupo-ox"
+location.href="https://souoxx.wixsite.com/grupo-ox"
 </script>
